SERVER-7439 remove unused parameter and redundant routine

Remove the unused 'len' parameter from DataFileMgr::makeDeletedRecord(), make
it call MongoDataFile::recordAt() instead of MongoDataFile::makeRecord().
Remove the now-unused MongoDataFile::makeRecord().  Set nextDeleted to Null
in Extent::init() for completeness (it would get set when the deleted record
was added to a deleted list, so this isn't strictly required).  Clean up the
code slightly (reinterpret_cast instead of C-style cast).